datenbank bearbeitet login implementiert acc erstellen überprüft ob acc schon vorhanden ist

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         </activity>
         <activity android:name=".PassVergessen">
         </activity>
+        <activity android:name=".BaustellenViewActivity">
+        </activity>
     </application>
 
 </manifest>
