--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/baustellenschild"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/baustellenschild"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
@@ -18,7 +18,6 @@
         </activity>
         <activity android:name=".AccErstellen" />
         <activity android:name=".PassVergessen" />
-        <activity android:name=".BaustellenViewActivity" />
         <activity
             android:name=".BaustellenViewActivity2"
             android:label="@string/title_activity_baustellen_view2"
